[package]
name = "rs-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.8", features = ["derive"] }
opa-wasm = "0.1.0"
serde_json = "1.0.120"
tokio = { version = "1.38.0", features = ["fs", "macros", "rt-multi-thread"] }
